[package]
name = "caina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.14"
reqwest = { version = "0.12.2", features = ["blocking"] }
rand = "0.8.5"
sha-1 = "0.10.1"
data-encoding = "2.5.0"
bincode = "1.3.3"
